fix horizontal scroll and mobile friendliness

--- a/output.css
+++ b/output.css
@@ -1158,7 +1158,9 @@ body {
   flex-direction: column;
   align-items: center;
   box-sizing: border-box;
-  width: 100vw;
+  /* width: 100vw; */
+  max-width: 100%;
+  
   /* Full viewport width */
   background-color: var(--accent-color);
   padding: 20px;
@@ -1210,6 +1212,11 @@ footer {
 
 .hover\:underline-offset-4:hover {
   text-underline-offset: 4px;
+}
+
+#container {
+  width: 60%;
+  margin: 0 auto;
 }
 
 @media (min-width: 640px) {
